Replace new Double with Double.valueOf.